# django-starter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vite.config.js
apps/core/: exceptions.py
apps/pages/: urls.py
apps/pages/templates/pages/: about.html
apps/users/: admin.py  urls.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/users/: login_form.html
apps/users/views/: __init__.py  login_action_view.py  login_form_partial_view.py  login_form_view.py
config/: urls.py
config/settings/: __init__.py  auth.py  database.py  django.py  env.py  installed_apps.py  logging.py  middleware.py  static.py  templates.py  unfold.py  vite.py
core/: mixins.py  views.py
docker/: Dockerfile  entrypoint.sh  nginx.conf
pages/: urls.py  views.py
pages/templates/: base.html
pages/templates/errors/: 400.html  500.html
pages/templates/includes/: footer.html  navbar.html
pages/templates/pages/: home.html  login.html  trigger_delay.html
pages/templates/pages/partials/: positions_row_form.html  positions_table.html  positions_tbody.html
static/css/: main.css
static/js/: main.js
templates/: base.html
templates/errors/: 403.html  404.html
templates/includes/: navbar.html
