[project]
name = "django-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.7.1",
    "django>=6.0.5",
    "django-unfold>=0.94.0",
    "django-vite>=3.1.0",
    "django-widget-tweaks>=1.5.1",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "pytest>=9.0.3",
]
